argocd/backend/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 8091
      targetPort: 8091
  type: ClusterIP
